fix: (home.html.twig) link for img fixed,position of  slider btns for mobile scren changed, (properties.html.twig) z-index of list of the property added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -892,6 +892,7 @@ h1 {
 .featured {
   display: grid;
   grid-template: auto/repeat(4, 1fr);
+  position: relative;
 }
 .featured__swiper {
   grid-column: 1/5;
@@ -1027,7 +1028,6 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 155px;
   height: 50px;
   padding: 0 1rem;
   text-decoration: none;
@@ -1036,7 +1036,7 @@ h1 {
   white-space: nowrap;
   border: 2px solid #262626;
   border-radius: 10px;
-  grid-column: 1/3;
+  grid-column: 1/5;
 }
 @media (min-width: 1024px) {
   .featured__link {
@@ -1056,17 +1056,27 @@ h1 {
   background: #703BF7;
 }
 .featured__btn_container {
+  position: absolute;
+  top: 50%;
+  left: 2%;
+  right: 2%;
+  transform: translateY(50%);
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 1rem;
-  grid-column: 3/5;
-  justify-content: end;
+  justify-content: space-between;
+}
+@media (min-width: 768px) {
+  .featured__btn_container {
+    left: 1%;
+    right: 1%;
+  }
 }
 @media (min-width: 1024px) {
   .featured__btn_container {
+    position: static;
     justify-content: center;
     grid-column: 1/5;
+    gap: 1rem;
   }
 }
 .featured__btn {
@@ -1091,6 +1101,14 @@ h1 {
 .featured__btn.right > .arrow > span, .featured__btn.right > .arrow::before, .featured__btn.right > .arrow::after {
   background-color: white;
 }
+.featured__btn.left {
+  background-color: #191919;
+}
+@media (min-width: 1024px) {
+  .featured__btn.left {
+    background-color: transparent;
+  }
+}
 .featured__btn.left > .arrow {
   top: 48%;
   right: 18%;
@@ -1105,6 +1123,7 @@ h1 {
 
 .reviews {
   padding-top: 4rem;
+  position: relative;
 }
 .reviews__swiper {
   display: flex;
@@ -1236,10 +1255,20 @@ h1 {
   }
 }
 .reviews__btn_container {
+  position: absolute;
+  top: 63%;
+  left: 2%;
+  right: 2%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  gap: 1rem;
+  justify-content: space-between;
+}
+@media (min-width: 1024px) {
+  .reviews__btn_container {
+    gap: 1rem;
+    position: static;
+    justify-content: center;
+  }
 }
 .reviews__btn {
   cursor: pointer;
@@ -1262,6 +1291,14 @@ h1 {
 }
 .reviews__btn.right > .arrow > span, .reviews__btn.right > .arrow::before, .reviews__btn.right > .arrow::after {
   background-color: white;
+}
+.reviews__btn.left {
+  background: #191919;
+}
+@media (min-width: 1024px) {
+  .reviews__btn.left {
+    background: transparent;
+  }
 }
 .reviews__btn.left > .arrow {
   top: 48%;
@@ -2029,6 +2066,7 @@ h1 {
   border-radius: 10px;
   background: #141414;
   overflow-y: auto;
+  z-index: 99999;
 }
 @media (min-width: 768px) {
   .dream__options {
@@ -2113,6 +2151,9 @@ h1 {
   }
 }
 
+.featured_swiper {
+  position: relative;
+}
 .featured_swiper h3 {
   font-size: 1.8rem;
   font-weight: 600;
@@ -2125,7 +2166,12 @@ h1 {
   }
 }
 .featured_swiper .featured__btn_container {
-  justify-content: center;
+  justify-content: space-between;
+}
+@media (min-width: 1024px) {
+  .featured_swiper .featured__btn_container {
+    justify-content: center;
+  }
 }
 
 .happen {
