--- a/assets/scss/_home.scss
+++ b/assets/scss/_home.scss
@@ -219,6 +219,7 @@
 .featured {
   display: grid;
   grid-template: auto/repeat(4,1fr);
+  position: relative;
 
   &__swiper{
     grid-column: 1/5;
@@ -342,7 +343,6 @@
 
   &__link{
     @include flex-center;
-    width: 155px;
     height: 50px;
     padding: 0 1rem;
     text-decoration: none;
@@ -350,7 +350,7 @@
     background-color: $second-bg;
     white-space: nowrap;
     @include border-grey($border-radius-sm);
-    grid-column: 1/3;
+    grid-column: 1/5;
     @include vieport-lg{
       grid-row: 3/4;
       grid-column: 4/5;
@@ -368,13 +368,23 @@
   }
 
   &__btn_container{
-    @include flex-center;
-    gap: 1rem;
-    grid-column: 3/5;
-    justify-content: end;
+    position: absolute;
+    top: 50%;
+    left: 2%;
+    right: 2%;
+    transform: translateY(50%);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @include vieport-md{
+      left: 1%;
+      right: 1%;
+    }
     @include vieport-lg{
+      position: static;
       justify-content: center;
       grid-column: 1/5;
+      gap: 1rem;
     }
   }
 
@@ -401,6 +411,10 @@
     }
 
     &.left{
+      background-color: $second-bg;
+      @include vieport-lg{
+        background-color: transparent;
+      }
       & > .arrow{
         top: 48%;
         right: 18%;
@@ -424,6 +438,7 @@
 
 .reviews {
 padding-top: 4rem;
+position: relative;
 
   &__swiper{
     display: flex;
@@ -539,8 +554,19 @@ padding-top: 4rem;
   }
 
   &__btn_container{
-    @include flex-center;
-    gap: 1rem;
+    position: absolute;
+    top: 63%;
+    left: 2%;
+    right: 2%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    @include vieport-lg{
+      gap: 1rem;
+      position: static;
+      justify-content: center;
+    }
+    
   }
 
   &__btn{
@@ -566,6 +592,10 @@ padding-top: 4rem;
     }
 
     &.left{
+      background: $second-bg;
+      @include vieport-lg{
+        background: transparent;
+      }
       & > .arrow{
         top: 48%;
         right: 18%;
